Fix hoverthumb on mobile

--- a/RockWeb/Themes/church_ccv_External_v7/Styles/modules/_hoverthumb.less
+++ b/RockWeb/Themes/church_ccv_External_v7/Styles/modules/_hoverthumb.less
@@ -10,10 +10,12 @@
 }
   .hoverthumb {
     .text-aa();
+    position: relative;
     margin-bottom: @grid-gutter-width;
+    overflow: hidden;
+    border-radius: @border-radius-large;
     img {
       width: 100%;
-      border-radius: @border-radius-large;
     }
   }
     .hoverthumb a {
